--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
 
     services:
       mysql:
-        image: mysql:5.7
+        image: mariadb:8
         env:
           MYSQL_ROOT_PASSWORD:
           MYSQL_DATABASE: ppl
@@ -24,7 +24,7 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 1
 
